# My_Language_Interpreter

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Justfile  README.md
docs/: tools.md
include/: asTree.hpp  char_stream.hpp  error.hpp  error_module.hpp  interpreter_exception.hpp  lexer.h  lexer.hpp  parser.hpp  position.hpp  token.hpp
include/visitors/: astVisitor.hpp  parserVisitor.hpp
scripts/: format.sh
src/: asTree.cpp  char_stream.cpp  lexer.cpp  main.cpp  parser.cpp
src/visitors/: parserVisitor.cpp
test/integration/: CMakeLists.txt  test_parser.cpp
test/unit/: CMakeLists.txt  test_lexer.cpp
test_cases/: test_arg_as_copy.txt  test_composition.txt  test_concatenation.txt  test_const_var.txt  test_decorator.txt  test_fun_as_var.txt  test_global_var.txt  test_if.txt  test_math_op.txt  test_max_int.txt  test_mutable_var.txt  test_oper_order.txt  test_polish_symbols.txt  test_recursion.txt  test_strong_typing.txt  test_var_decl.txt  test_while.txt
